Updating website title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/luvio_heart.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no">
-    <title>luvio-website</title>
+    <title>Luvio</title>
   </head>
   <body>
     <div id="root"></div>
